--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit>=1.37.0
 chromadb>=0.5.3
 vaderSentiment>=3.3.2
-google-generativeai>=0.5.0
 sentence-transformers>=3.0.0
+transformers>=4.41.2
+torch>=2.3.0
 uvicorn>=0.30.0
 pydantic>=2.7.0
